logs/exceptions.log
[31m[31merror[31m[39m:   uncaughtException: Oops!
Error: Oops!
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\app.js:38:7)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\server.js:2:13)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
[31m[31merror[31m[39m:   uncaughtException: internalServerError is not defined
ReferenceError: internalServerError is not defined
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\app.js:8:1)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\server.js:2:13)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
[31m[31merror[31m[39m:   uncaughtException: re is not defined
ReferenceError: re is not defined
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\app.js:8:29)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\server.js:2:13)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
[31m[31merror[31m[39m:   uncaughtException: Cannot find module ' ./helpers/error'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
Error: Cannot find module ' ./helpers/error'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:982:15)
    at Function.Module._load (internal/modules/cjs/loader.js:864:27)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\app.js:8:29)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
[31m[31merror[31m[39m:   uncaughtException: Cannot find module './helpers/ ./helpers/error'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
Error: Cannot find module './helpers/ ./helpers/error'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:982:15)
    at Function.Module._load (internal/modules/cjs/loader.js:864:27)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\app.js:8:29)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
[31m[31merror[31m[39m:   uncaughtException: Cannot find module './helpers/error.js ./helpers/error'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
Error: Cannot find module './helpers/error.js ./helpers/error'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:982:15)
    at Function.Module._load (internal/modules/cjs/loader.js:864:27)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\app.js:8:29)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
[31m[31merror[31m[39m:   uncaughtException: Cannot find module '../../helpers/'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\resources\tasks\task.router.js
- D:\Александр\! Программирование\RS\nodejs-course\src\resources\boards\board.router.js
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
Error: Cannot find module '../../helpers/'
Require stack:
- D:\Александр\! Программирование\RS\nodejs-course\src\resources\tasks\task.router.js
- D:\Александр\! Программирование\RS\nodejs-course\src\resources\boards\board.router.js
- D:\Александр\! Программирование\RS\nodejs-course\src\app.js
- D:\Александр\! Программирование\RS\nodejs-course\src\server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:982:15)
    at Function.Module._load (internal/modules/cjs/loader.js:864:27)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (D:\Александр\! Программирование\RS\nodejs-course\src\resources\tasks\task.router.js:3:26)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
[31m[31merror[31m[39m:   uncaughtException: Unexpected token 'const'
d:\Александр\! Программирование\RS\nodejs-course\src\resources\tasks\task.router.js:21
      const task = await taskService.getTaskById(
      ^^^^^

SyntaxError: Unexpected token 'const'
    at wrapSafe (internal/modules/cjs/loader.js:1072:16)
    at Module._compile (internal/modules/cjs/loader.js:1122:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (d:\Александр\! Программирование\RS\nodejs-course\src\resources\boards\board.router.js:4:20)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
[31m[31merror[31m[39m:   uncaughtException: Unexpected token 'const'
d:\Александр\! Программирование\RS\nodejs-course\src\resources\tasks\task.router.js:21
      const task = await taskService.getTaskById(
      ^^^^^

SyntaxError: Unexpected token 'const'
    at wrapSafe (internal/modules/cjs/loader.js:1072:16)
    at Module._compile (internal/modules/cjs/loader.js:1122:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (d:\Александр\! Программирование\RS\nodejs-course\src\resources\boards\board.router.js:4:20)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
